# AI-based-intrusion-detection-system

./: README.md
Models/: CNN-Model.ipynb  DNN Model.ipynb  LightGBM-Model.ipynb  Multi-class-Classification-with-Random-Forest.ipynb  XGBoost-Model.ipynb
ns-allinone-3.42/netanim-3.109/: Makefile  qrc_qtpropertybrowser.cpp  qrc_resources.cpp
ns-allinone-3.42/ns-3.42/: .lock-ns3_linux_build  CMakeLists.txt  netsimulyzer-mobility-buildings-example.json
ns-allinone-3.42/ns-3.42/FlowDataNormal/: aodv-b-flow-data-normal-20241111_022020-20.csv  aodv-b-flow-data-normal-20241111_024417-20.csv  aodv-b-flow-data-normal-20241111_030238-25.csv  aodv-b-flow-data-normal-20241111_030859-30.csv  aodv-b-flow-data-normal-20241111_032823-30.csv  aodv-b-flow-data-normal-20241111_033705-30.csv  aodv-b-flow-data-normal-20241111_034542-30.csv  aodv-b-flow-data-normal-20241111_035926-30.csv  aodv-b-flow-data-normal-20241111_041656-10.csv  aodv-b-flow-data-normal-20241111_042533-10.csv  aodv-b-flow-data-normal-20241111_044339-30.csv  aodv-b-flow-data-normal-20241111_060948-20.csv  aodv-b-flow-data-normal-20241111_061228-25.csv  aodv-b-flow-data-normal-20241111_063611-25.csv  aodv-b-flow-data-normal-20241111_065045-10.csv  aodv-b-flow-data-normal-20241111_143732-20.csv  aodv-b-flow-data-normal-20241111_171011-20.csv
ns-allinone-3.42/ns-3.42/FlowMonitor/: aodv-b-flow-data-normal-20240909_141936-25.xml  aodv-b-flow-data-normal-20240909_142258-25.xml  aodv-b-flow-data-normal-20240910_143159-25.xml  aodv-b-flow-data-normal-20240930_101539-25.xml  aodv-b-flow-data-normal-20241018_120429-25.xml  aodv-b-flow-data-normal-20241025_122209-25.xml  aodv-b-flow-data-normal-20241025_122346-25.xml  aodv-b-flow-data-normal-20241025_123244-25.xml  aodv-b-flow-data-normal-20241025_133620-25.xml  aodv-b-flow-data-normal-20241025_140419-25.xml  aodv-b-flow-data-normal-20241025_142830-25.xml  aodv-b-flow-data-normal-20241025_143835-25.xml  aodv-b-flow-data-normal-20241107_003712-25.xml  aodv-b-flow-data-normal-20241107_092935-25.xml  aodv-b-flow-data-normal-20241107_093157-25.xml  aodv-b-flow-data-normal-20241107_093542-25.xml  aodv-b-flow-data-normal-20241107_131454-25.xml  aodv-b-flow-data-normal-20241108_144501-25.xml  aodv-b-flow-data-normal-20241108_172017-25.xml  aodv-b-flow-data-normal-20241108_172201-25.xml  aodv-b-flow-data-normal-20241108_221328-25.xml  aodv-b-flow-data-normal-20241108_230922-30.xml  aodv-b-flow-data-normal-20241108_231750-30.xml  aodv-b-flow-data-normal-20241108_232919-30.xml  aodv-b-flow-data-normal-20241108_233429-30.xml  aodv-b-flow-data-normal-20241108_233744-30.xml  aodv-b-flow-data-normal-20241108_234128-30.xml  aodv-b-flow-data-normal-20241108_235147-30.xml  aodv-b-flow-data-normal-20241108_235257-30.xml  aodv-b-flow-data-normal-20241108_235552-30.xml  aodv-b-flow-data-normal-20241108_235947-30.xml  aodv-b-flow-data-normal-20241109_004204-3.xml  aodv-b-flow-data-normal-20241109_004314-8.xml  aodv-b-flow-data-normal-20241109_004442-20.xml  aodv-b-flow-data-normal-20241109_010158-20.xml  aodv-b-flow-data-normal-20241109_010313-20.xml  aodv-b-flow-data-normal-20241109_011443-20.xml  aodv-b-flow-data-normal-20241110_141926-25.xml  aodv-b-flow-data-normal-20241110_143556-40.xml  aodv-b-flow-data-normal-20241110_202502-30.xml  (+19 more)
ns-allinone-3.42/ns-3.42/NetAnim/: aodv-b-uav-netanim-20240909_141936-25.xml  aodv-b-uav-netanim-20240909_142258-25.xml  aodv-b-uav-netanim-20240910_143159-25.xml  aodv-b-uav-netanim-20240930_101539-25.xml  (+70 more)
ns-allinone-3.42/ns-3.42/scratch/: CMakeLists.txt
ns-allinone-3.42/ns-3.42/scratch/test1/: SimpleEnv.cpp
ns-allinone-3.42/ns-3.42/scratch/uav-network/: .main.cc.swp  fanet-udp-app.cc  fanet-udp-app.h  flocking-mobility-model.cc  flocking-mobility-model.h  flooding-attack-app.cc  flooding-attack-app.h  impersonation-attack-app.cc  impersonation-attack-app.h  main.cc  malicious-tag.cc  malicious-tag.h  mitm-app.cc  mitm-app.h  sybil-attack-app.cc  sybil-attack-app.h
(+207 files in other folders)
